src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__arithmetic.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

1 + 1
3 * 4
1 + 7 / 2 * 3 - 1

OK
Root(
    [
        StmtExpr(
            Infix(
                Add,
                Int32(
                    1,
                ),
                Int32(
                    1,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Mul,
                Int32(
                    3,
                ),
                Int32(
                    4,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Sub,
                Infix(
                    Add,
                    Int32(
                        1,
                    ),
                    Infix(
                        Mul,
                        Infix(
                            Div,
                            Int32(
                                7,
                            ),
                            Int32(
                                2,
                            ),
                        ),
                        Int32(
                            3,
                        ),
                    ),
                ),
                Int32(
                    1,
                ),
            ),
        ),
    ],
)
