src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__assign.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

x = 0

x.a = 0

x[0] = 0

x.a[0] = 0

x[0].a = 0

x.a.b.c[0][1][2] = 0


x += 1
x -= 1
x *= 1
x /= 1

OK
Root(
    [
        StmtExpr(
            SetVar(
                None,
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int32(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetField(
                None,
                GetField(
                    GetVar(
                        Ident(
                            "x",
                        ),
                    ),
                    Ident(
                        "a",
                    ),
                ),
                Int32(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetIndex(
                None,
                GetIndex(
                    GetVar(
                        Ident(
                            "x",
                        ),
                    ),
                    Int32(
                        0,
                    ),
                ),
                Int32(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetIndex(
                None,
                GetIndex(
                    GetField(
                        GetVar(
                            Ident(
                                "x",
                            ),
                        ),
                        Ident(
                            "a",
                        ),
                    ),
                    Int32(
                        0,
                    ),
                ),
                Int32(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetField(
                None,
                GetField(
                    GetIndex(
                        GetVar(
                            Ident(
                                "x",
                            ),
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    Ident(
                        "a",
                    ),
                ),
                Int32(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetIndex(
                None,
                GetIndex(
                    GetIndex(
                        GetIndex(
                            GetField(
                                GetField(
                                    GetField(
                                        GetVar(
                                            Ident(
                                                "x",
                                            ),
                                        ),
                                        Ident(
                                            "a",
                                        ),
                                    ),
                                    Ident(
                                        "b",
                                    ),
                                ),
                                Ident(
                                    "c",
                                ),
                            ),
                            Int32(
                                0,
                            ),
                        ),
                        Int32(
                            1,
                        ),
                    ),
                    Int32(
                        2,
                    ),
                ),
                Int32(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetVar(
                Add,
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int32(
                    1,
                ),
            ),
        ),
        StmtExpr(
            SetVar(
                Sub,
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int32(
                    1,
                ),
            ),
        ),
        StmtExpr(
            SetVar(
                Mul,
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int32(
                    1,
                ),
            ),
        ),
        StmtExpr(
            SetVar(
                Div,
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int32(
                    1,
                ),
            ),
        ),
    ],
)
