src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__block.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

do {
  1 + 1
  2 + 2
}

do {
  do {
    1 + 1
    2 + 2
  }
}

let expr = do { 1 + 1 }

OK
Root(
    [
        StmtExpr(
            Block(
                [
                    StmtExpr(
                        Infix(
                            Add,
                            Int32(
                                1,
                            ),
                            Int32(
                                1,
                            ),
                        ),
                    ),
                    StmtExpr(
                        Infix(
                            Add,
                            Int32(
                                2,
                            ),
                            Int32(
                                2,
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            Block(
                [
                    StmtExpr(
                        Block(
                            [
                                StmtExpr(
                                    Infix(
                                        Add,
                                        Int32(
                                            1,
                                        ),
                                        Int32(
                                            1,
                                        ),
                                    ),
                                ),
                                StmtExpr(
                                    Infix(
                                        Add,
                                        Int32(
                                            2,
                                        ),
                                        Int32(
                                            2,
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "expr",
            ),
            Block(
                [
                    StmtExpr(
                        Infix(
                            Add,
                            Int32(
                                1,
                            ),
                            Int32(
                                1,
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ],
)
