src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__call_table.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "empty",
                    ),
                ),
                [],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "single_arg",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "single_arg_tc",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "multi_arg",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "multi_arg_tc",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "single_arg_inline",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "single_arg_inline_tc",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "multi_arg_mixed",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "multi_arg_mixed_tc",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "multi_arg_mixed2",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "multi_arg_mixed2_tc",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "string_key",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "string_key_tc",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "string_key_multi",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallTable(
                GetVar(
                    Ident(
                        "string_key_multi_tc",
                    ),
                ),
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
    ],
)
