src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__calls.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

test()
test(1)
test(1, 2, 3)
test(1, 2, 3, )


OK
Root(
    [
        StmtExpr(
            Call(
                GetVar(
                    Ident(
                        "test",
                    ),
                ),
                [],
            ),
        ),
        StmtExpr(
            Call(
                GetVar(
                    Ident(
                        "test",
                    ),
                ),
                [
                    Int32(
                        1,
                    ),
                ],
            ),
        ),
        StmtExpr(
            Call(
                GetVar(
                    Ident(
                        "test",
                    ),
                ),
                [
                    Int32(
                        1,
                    ),
                    Int32(
                        2,
                    ),
                    Int32(
                        3,
                    ),
                ],
            ),
        ),
        StmtExpr(
            Call(
                GetVar(
                    Ident(
                        "test",
                    ),
                ),
                [
                    Int32(
                        1,
                    ),
                    Int32(
                        2,
                    ),
                    Int32(
                        3,
                    ),
                ],
            ),
        ),
    ],
)
