src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__cmp.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

0 < 1
1 > 0
1 >= 0
0 <= 1
1 == 1
0 != 1

OK
Root(
    [
        StmtExpr(
            Infix(
                Lt,
                Int32(
                    0,
                ),
                Int32(
                    1,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Gt,
                Int32(
                    1,
                ),
                Int32(
                    0,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Ge,
                Int32(
                    1,
                ),
                Int32(
                    0,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Le,
                Int32(
                    0,
                ),
                Int32(
                    1,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Eq,
                Int32(
                    1,
                ),
                Int32(
                    1,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Ne,
                Int32(
                    0,
                ),
                Int32(
                    1,
                ),
            ),
        ),
    ],
)
