src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__expr_return0.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

return  // no value


OK
Root(
    [
        StmtExpr(
            Return(
                None,
            ),
        ),
    ],
)
