src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__expr_return2.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
##parse

return
100  # return value


OK
Root(
    [
        StmtExpr(
            Return(
                Some(
                    Int32(
                        100,
                    ),
                ),
            ),
        ),
    ],
)
