src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__expr_return3.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
##parse

do {
  return
}

100 # not return value


OK
Root(
    [
        StmtExpr(
            Block(
                [
                    StmtExpr(
                        Return(
                            None,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            Int32(
                100,
            ),
        ),
    ],
)
