src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__floats.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
##parse

let one = 1.0
let pi = 3.14
let exp = 2e10
let n_exp = 2e-10


OK
Root(
    [
        Var(
            Ident(
                "one",
            ),
            Float32(
                1.0,
            ),
        ),
        Var(
            Ident(
                "pi",
            ),
            Float64(
                3.14,
            ),
        ),
        Var(
            Ident(
                "exp",
            ),
            Float32(
                20000000000.0,
            ),
        ),
        Var(
            Ident(
                "n_exp",
            ),
            Float64(
                2e-10,
            ),
        ),
    ],
)
